# snake

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/: release-drafter-template.yml
.github/workflows/: build_and_test.yml  deploy.yml  release-drafter.yml  test.yml
src/: app.rs  cell.rs  collidable.rs  direction.rs  food.rs  game.rs  game_score.rs  game_status.rs  lib.rs  main.rs  position.rs  snake.rs
src/game/: Cargo.toml
src/game/src/: cell.rs  element.rs  food.rs  game.rs  game_status.rs  lib.rs  position.rs  snake.rs
src/ui/: Cargo.toml
src/ui/src/: app.rs  lib.rs
src/ui/src/components/: cell.rs  game.rs  game_score.rs  game_status.rs  mod.rs
src/ui/src/game/: board.rs  cell.rs  footer.rs  game_screen.rs  header.rs  mod.rs  row.rs
