[package]
name = "snake"
version = "0.0.1"
edition = "2021"
authors = ["Stephen Kelzer"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
js-sys = "0.3.59"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = [
    "CssStyleDeclaration",
    "console",
    "Document",
    "Element",
    "HtmlDivElement",
    "HtmlElement",
    "KeyboardEvent",
    "Window",
] }
